# EduBalance

./: .gitignore  .replit  Dokumentation_lerncare v2.4 (1).docx  Kartenspiel LERNCARE.docx  README.md  Ressourcenliste1.docx  alle Ressourcen sort - Tabellenblatt1.csv  alle Ressourcen sort - Tabellenblatt2.csv  app.py  extensions.py  fiktiv lc 1.docx  lerncare Plattform Aug 24.docx  lerncare content v2.4 (1).docx  messages.pot  pasted_text_1725920352956.txt  pasted_text_1725923801434.txt  pasted_text_1725959228495.txt  pasted_text_1725959574368.txt  pasted_text_1725983062708.txt  pasted_text_1725991483960.txt  pasted_text_1725998016972.txt  pyproject.toml  requirements.txt
models/: __init__.py  forum.py  resource.py  user.py
routes/: __init__.py  auth.py  dashboard.py  forum.py  main.py  resources.py
static/css/: main.css
static/js/: main.js
templates/: base.html  dashboard.html  forum.html  index.html  interactive_resources.html  login.html  new_post.html  profile.html  register.html  resources.html
tests/: test_auth.py  test_forum.py  test_models.py
translations/de/LC_MESSAGES/: messages.mo  messages.po
utils/: __init__.py  ai_coach.py  gamification.py
