[tool.poetry]
name = "repl-nix-edubalance"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
scikit-learn = "^1.5.1"
psycopg2-binary = "^2.9.9"
werkzeug = "^3.0.4"
jinja2 = "^3.1.4"
flask-babel = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
